# halite

./: .gitignore  1482263414-1481951119.hlt  Cargo.toml  README.md  runGame.sh
src/: MyBot.rs  MyBotV2.rs  MyBotV3.rs  MyBotV4.rs  MyBotV5.rs  MyBotV6.rs  MyBotV7.rs  MyBotV9.rs  RandomBot.rs  SmartBot.rs
