[package]
name = "Rust"
version = "0.1.0"
authors = ["Pavel Kolevatyh <pavel.kolevatyh@gmail.com>"]

publish = false
vcs = "None"

[dependencies]
rand = "*"
text_io = "*"
lazy_static = "0.1.*"

[[bin]]
path = "src/SmartBot.rs"
name = "smart_bot"

[[bin]]
path = "src/RandomBot.rs"
name = "RandomBot"
