[package]
name = "Rust"
version = "0.1.0"
authors = ["Pavel Kolevatyh <pavel.kolevatyh@gmail.com>"]

publish = false
vcs = "None"

[dependencies]
rand = "*"
text_io = "*"

[[bin]]
path = "src/MyBot.rs"
name = "MyBot"

[[bin]]
path = "src/MyBotV2.rs"
name = "MyBotV2"

[[bin]]
path = "src/MyBotV3.rs"
name = "MyBotV3"

[[bin]]
path = "src/MyBotV4.rs"
name = "MyBotV4"

